completed unbilled charges (& cdrs) page, added unbilled charge (cdr) details page, updated invoiced charges (& cdrs) page, update invoiced cdr details page, added Destination and Rate orm classes to help with fetching cdr details, added method to CDR orm for fetching cdr details

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -3985,3 +3985,12 @@ div.popup-account-edit-rebill > div.buttons
 }
 
 /************************ END - Edit Rebill Popup - END ************************/
+
+/************************ START - CDR List Table - START ************************/
+
+table.cdr-list div.caption_options form#cdrForm button
+{
+	margin	: 0em !important;
+}
+
+/************************ END - CDR List Table - END ************************/
